@startuml "Milele SkillSage"


entity "Candidates" {
  * id : int
  --
  * name : varchar
  * email : varchar
  * created_at : datetime
  * updated_at : datetime
}

entity "Tests" {
  * id : int
  --
  * title : varchar
  * description : text
  * duration : int (minutes)
  * admin_id : int
  * overall_results_pdf_path : varchar
  * deleted_by : int "FK to Admins"
  * deleted_at : datetime "Soft delete timestamp"
  * created_at : datetime
  * updated_at : datetime
}

entity "Candidate Test" {
  * candidate_id : int
  * test_id : int
  --
  * role : string
  * department_id : string
  * started_at : datetime
  * completed_at : datetime
  * score : int
  * red_flags : JSON 
  * correct_answers : int 
  * wrong_answers : int 
  * report_path : string
  * ip_address : text
  * status : enum
  * status : enum
  * remaining_time : int (nullable) // Remaining time in seconds
  * suspended_at : datetime (nullable) // Timestamp of suspension
  * suspension_reason : text (nullable) // Reason for suspension
  * is_suspended : boolean (default: false) // Flag to indicate suspension
  * created_at : datetime
  * updated_at : datetime
}

entity "Candidate Test Screenshots" {
  * id : int
  --
  * test_id : int
  * candidate_id : int
  * screenshot_path : varchar
  * created_at : datetime
  * updated_at : datetime
}

entity "Questions" {
  * id : int
  --
  * test_id : int
  * question_text : text
  * question_type : varchar (e.g., 'mcq', 'short_answer')
  * category : text
  * reverse : boolean
  * red_flag : boolean 
  * created_at : datetime
  * updated_at : datetime
}

entity "Question Choices" {
  * id : int
  --
  * question_id : int
  * choice_text : text
  * is_correct : boolean
  * created_at : datetime
  * updated_at : datetime
}

entity "Question Media" {
  * id : int
  --
  * question_id : int
  * image_url : varchar
  * description : text
  * created_at : datetime
  * updated_at : datetime
}

entity "Answers" {
  * id : int
  --
  * candidate_id : int
  * test_id : int
  * question_id : int
  * answer_text : text
  * created_at : datetime
  * updated_at : datetime
}

entity "Admins" {
  * id : int
  --
  * name : varchar
  * email : varchar
  * created_at : datetime
  * updated_at : datetime
}

entity "Flag Types" {
  * id : int
  --
  * name : varchar
  * description : text
  * threshold : int
  * created_at : datetime
  * updated_at : datetime
}

entity "Candidate Flags" {
  * id : int
  --
  * candidate_id : int
  * test_id : int
  * flag_type_id : int
  * occurrences : int
  * is_flagged : boolean
  * created_at : datetime
  * updated_at : datetime
}

entity "Invitations" {
  * id : int
  --
  * test_id : int
  * invited_emails : JSON
  * expiration_date : datetime
  * invitation_token : varchar
  * invitation_link : varchar
  * created_at : datetime 
  * updated_at : datetime
}

' Relationships
"Candidates" ||--|{ "Answers" : has many
"Candidates" ||--|{ "Candidate Flags" : has many
"Candidates" ||--|{ "Candidate Test" : takes many tests
"Tests" ||--|{ "Questions" : has many
"Tests" ||--o| "Invitations" : has one
"Questions" ||--|{ "Question Choices" : has many
"Questions" ||--o| "Question Media" : has one
"Questions" ||--|{ "Answers" : has many  
"Flag Types" ||--|{ "Candidate Flags" : many types used by
"Admins" ||--|{ "Tests" : manages many
"Candidate Test" ||--|{ "Candidate Test Screenshots" : "has many screenshots"


@enduml